pages: root index → /play/km/ + .nojekyll

--- a/index.html
+++ b/index.html
@@ -1,75 +1,4 @@
-﻿<!doctype html>
-<html lang="nl">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Tekentafel — 101 Game</title>
-  <style>
-    :root{--fg:#eaeaea;--bg:#0b0b0f;--acc:#ffd400;}
-    html,body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
-    a{color:var(--acc);text-decoration:none} a:hover{text-decoration:underline}
-    .wrap{max-width:840px;margin:48px auto;padding:0 20px}
-    h1{font-size:2.2rem;margin:.2rem 0 1rem}
-    .lead{opacity:.9;margin:.2rem 0 1.2rem}
-    .cta{display:inline-block;margin:.5rem .5rem .5rem 0;padding:.6rem 1rem;border:1px solid var(--acc);border-radius:8px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;margin-top:10px}
-    .card{border:1px solid #222;border-radius:10px;padding:14px;background:rgba(255,255,255,0.02)}
-    .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace}
-    footer{margin:32px 0 8px;opacity:.7}
-  </style>
-</head>
-<body>
-  <main class="wrap">
-    <h1>Tekentafel — 101 Game</h1>
-    <p class="lead">Ik verveel me. Dus bouwen we met de hele wereld aan de enige echte <strong>101 Game</strong> — samen, open, iteratief.</p>
-
-    <p>
-      <a class="cta" href="https://github.com/meneer-van-informatica/the-101-game">Bouw je mee? → GitHub</a>
-      <a class="cta" href="https://meneer-van-informatica.github.io/the-101-game/">Projectsite</a>
-      <a class="cta" href="https://meneer-van-informatica.github.io/the-101-game//docs/graph.md">Mermaid-graaf</a>
-    </p>
-
-    <h2>Vage Visie</h2>
-    <div class="grid">
-      <div class="card"><strong>W0 Bits & Logica (L0–L9)</strong><br><span class="mono">binaire tel, XOR, K-map, adder</span></div>
-      <div class="card"><strong>W1 Algoritmen (L10–L19)</strong><br><span class="mono">lineair/binair, sort, invariant</span></div>
-      <div class="card"><strong>W2 Data & DB (L20–L29)</strong><br><span class="mono">ER, 1–3NF, select/project/join</span></div>
-      <div class="card"><strong>W3 Machines (L30–L39)</strong><br><span class="mono">FSM, fetch–decode–execute, pijplijn</span></div>
-      <div class="card"><strong>W4 Netwerken (L40–L49)</strong><br><span class="mono">pakket, DNS, HTTP, idempotent</span></div>
-      <div class="card"><strong>W5 AI-Basics (L50–L59)</strong><br><span class="mono">split, verlies, metric, bias</span></div>
-      <div class="card"><strong>W6 Robot-Choreo (L60–L69)</strong><br><span class="mono">states, millis-timing, tempo</span></div>
-      <div class="card"><strong>W7 Sensor & Regel (L70–L79)</strong><br><span class="mono">ruis, Kalman-intuïtie, PID</span></div>
-      <div class="card"><strong>W8 Product & Pitch (L80–L89)</strong><br><span class="mono">BOM, marge, poster, consent</span></div>
-      <div class="card"><strong>W9 Ethiek & Show (L90–L99)</strong><br><span class="mono">veiligheid, no-face, publiek</span></div>
-      <div class="card"><strong>L100 Finale</strong><br><span class="mono">‘alles samen’ bossfight met 3 checks</span></div>
-    </div>
-
-    <footer>
-      <p>🔗 <a href="https://meneer-van-informatica.github.io/">https://meneer-van-informatica.github.io/</a> · 💻 <a href="https://github.com/meneer-van-informatica/the-101-game">https://github.com/meneer-van-informatica/the-101-game</a> · 🌐 <a href="https://meneer-van-informatica.github.io/the-101-game/">https://meneer-van-informatica.github.io/the-101-game/</a></p>
-    </footer>
-  </main>
-<!-- 🥚 -->
-<script>
-(function(){
-  var s = "Volg Mij en het Komt Goed, lul. Namens LMW.";
-  var k = [38,38,40,40,37,39,37,39,66,65], i = 0; // ↑↑↓↓←→←→BA
-  window.addEventListener('keydown', function(e){
-    var code = e.keyCode || e.which;
-    if (code === k[i]) {
-      i++;
-      if (i === k.length) {
-        i = 0;
-        var d = document.createElement('div');
-        d.textContent = s;
-        d.style.cssText = 'position:fixed;bottom:10px;right:12px;opacity:.12;' +
-                          'font:12px/1 system-ui,Segoe UI,Roboto,Arial,sans-serif;' +
-                          'pointer-events:none;color:#9aa;';
-        document.body.appendChild(d);
-      }
-    } else { i = 0; }
-  });
-})();
-</script>
-</body>
-</html>
-
+﻿<!doctype html><meta charset='utf-8'>
+<title>doorsturen…</title>
+<meta http-equiv='refresh' content='0;url=/play/km/'>
+<a href='/play/km/'>ga naar /play/km/</a>
