fix(pages): herstel index.html; add style+favicon; ensure .nojekyll

--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
-﻿<link rel='icon' href='/assets/favicon.svg' type='image/svg+xml'>
-<meta property='og:title' content='Tekentafel — 101 Game'>
-<meta property='og:description' content='Open leerwereld. Bouw mee, speel KM, bekijk de graaf, lees de docs.'>
-<meta property='og:url' content='https://meneer-van-informatica.github.io/'>
-<meta property='og:type' content='website'>
-<meta name='twitter:card' content='summary_large_image'>
+﻿<!doctype html>
+<html lang='nl'>
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>Tekentafel — 101 Game</title>
+  <meta name='description' content='Open leerwereld: 101 Game. Bouw mee, speel KM, bekijk de graaf, lees de docs.'>
+  <link rel='icon' href='/assets/favicon.svg' type='image/svg+xml'>
+  <link rel='stylesheet' href='/assets/style.css'>
+  <meta property='og:title' content='Tekentafel — 101 Game'>
+  <meta property='og:description' content='Open leerwereld. Bouw mee, speel KM, bekijk de graaf, lees de docs.'>
+  <meta property='og:url' content='https://meneer-van-informatica.github.io/'>
+  <meta property='og:type' content='website'>
+  <meta name='twitter:card' content='summary_large_image'>
+</head>
+<body>
+  <main>
+    <h1>Tekentafel — 101 Game</h1>
+    <p>Dit is de GitHub Pages root. Als je dit ziet, werkt de deploy.</p>
+    <nav>
+      <ul>
+        <li><a href='https://github.com/meneer-van-informatica/the-101-game'>Bouw mee → GitHub</a></li>
+        <li><a href='/docs/'>Projectsite</a></li>
+        <li><a href='/docs/graph.html'>Mermaid-graaf</a></li>
+        <li><a href='/play/km/'>Speel KM</a></li>
+      </ul>
+    </nav>
+  </main>
+</body>
+</html>
